--- a/testaj.html
+++ b/testaj.html
@@ -3,10 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>text ajax and json</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- <script src="myjs.js" type="text/javascript"></script>-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="mycss.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,22 +15,6 @@
 </head>
 
 <body onload="renderHTML()">
-<style>
-    body {
-        font-size: 18px;
-        font-family: Georgia, "Times New Roman", Times, serif;
-    }
-
-    button {
-        border-color: #03F;
-        background-color: #0F6;
-        padding: 15px;
-    }
-
-    button:hover {
-        background-color: #F99;
-    }
-</style>
 <div class="container">
     <div class="col-md-12">
         <div class="row">
@@ -39,22 +24,50 @@
                 <button id="b1" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                     Select a user&nbsp;<span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu" id="d1"></ul>
+                    <ul class="dropdown-menu" id="d1">
+                       <!-- <div class="dropdown-content"></div>-->
+                    </ul>
+            </div>
+           <!-- <div class="dropdown">
+            <button id="b2" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                Select a album &nbsp;<span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" id="d2">
+                <div class="dropdown-content"></div>
+            </ul>
+            </div>-->
+            <hr class="hr2">
+
+        </div>
+    </div>
+
+<div id="loader-container"></div>
+    <div id="getdataview">
+        <div class="row">
+
+            <div class="col-lg-6 col-md-6" style="padding-left: 38px;">
+                <div id="userdata"></div>
+            </div>
+            <div class="col-lg-6 col-md-6" style="padding-right: 38px; padding-top: 38px;">
+                <div id="map-container"></div>
+            </div>
+            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACB-NEqGYmb9PaZpBJxkhjhF7W9wPOM8A"></script>
+            <script src="mymap.js" type="text/javascript"></script>
+            <script src="myjson.js" type="text/javascript"></script>
+        </div>
+    </div>
+    <hr class="hr2">
+    <div id="postview">
+        <div class="row">
+            <div class="col-lg-6 col-md-6" style="padding-left: 38px;">
+                <div id="userposts"></div>
+            </div>
+            <div class="col-lg-6 col-md-6" style="padding-left: 38px;">
+                <div id="useralbum"></div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-6 col-md-6" style="padding-left: 38px;">
-            <div id="userdata"></div>
-        </div>
-        <div class="col-lg-6 col-md-6" style="padding-right: 38px; padding-top: 38px;">
-            <div id="map" style="width:400px;height:400px; float: right"></div>
-        </div>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACB-NEqGYmb9PaZpBJxkhjhF7W9wPOM8A"></script>
-        <script src="mymap.js" type="text/javascript"></script>
-        <script src="myjson.js" type="text/javascript"></script>
-    </div>
-    bhjbh
+    <hr class="hr2">
 </div>
 </body>
 </html>
